# promptnest

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.ci-cd/test/: action.yml
.github/workflows/: certification.yml  release.yml  test.yml
consumer_tests/: test_installed_package.py
consumer_tests/fixtures/: llm_responses.json
docs/: certification.md  performance-evidence.md  performance.md
docs/benchmarks/: openai_provider.py  performance.py  resilience.py
src/promptnest/: __init__.py  certify.py  checkpoints.py  exceptions.py  policies.py  protocols.py  providers.py  runner.py
src/promptnest/adapters/: __init__.py  _coerce.py  callable.py  crewai.py  langchain.py  langgraph.py  openai.py
tests/: conftest.py  test_adapters.py  test_json_contract.py  test_performance_benchmark.py  test_runner.py  test_scaling.py  test_streaming.py
tests/fixtures/: llm_responses.json
typing_tests/: public_api.py
