[project]
name = "promptnest"
version = "0.3.0"
description = "Typed async nested map/reduce orchestration for OpenAI, LangChain, LangGraph, and CrewAI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "al4xdev" },
]
keywords = [
    "ai",
    "crewai",
    "langchain",
    "langgraph",
    "llm",
    "map-reduce",
    "openai",
    "pydantic",
    "structured-output",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.8",
]

[project.scripts]
promptnest-certify = "promptnest.certify:cli"

[project.urls]
Homepage = "https://github.com/al4xdev/promptnest"
Documentation = "https://github.com/al4xdev/promptnest#readme"
Issues = "https://github.com/al4xdev/promptnest/issues"
Repository = "https://github.com/al4xdev/promptnest.git"
Changelog = "https://github.com/al4xdev/promptnest/blob/master/CHANGELOG.md"

[project.optional-dependencies]
openai = [
    "openai>=1.42",
]
langchain = [
    "langchain>=0.3",
    "langchain-core>=0.3",
]
langgraph = [
    "langgraph>=0.2.46",
]
crewai = [
    "crewai>=0.100",
]
all = [
    "promptnest[crewai,langchain,langgraph,openai]",
]

[dependency-groups]
dev = [
    "build>=1.2",
    "mypy>=1.15",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.11",
    "twine>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/promptnest"]

[tool.hatch.build.targets.sdist]
include = [
    "/CHANGELOG.md",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
    "/src",
    "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-config --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "N", "SIM", "UP", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
files = ["src", "typing_tests"]
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
